<resources>
    <string name="app_name">Homework 4.2</string>
    <string name="chocolate_syrup_text">Chocolate syrup</string>
    <string name="sprinkles_text">Sprinkles</string>
    <string name="crushed_nuts_text">Crushed nuts</string>
    <string name="cherries_text">Cherries</string>
    <string name="orio_cookie_crumbles_text">Orio cookie crumbles</string>
    <string name="show_toast_text">SHOW TOAST</string>
</resources>